--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>registro</title>
 </head>
 <body>
@@ -11,18 +12,19 @@
     <h2>Por favor registrate para ingresar</h2>
     <form id="registerForm">
         <label for="first_name">Nombre</label>
-        <input type="text" id="first_name" name="first_name" required>
+        <input type="text" class="form-control" id="first_name" name="first_name" required>
         <label for="last_name">Apellido</label>
-        <input type="text" id="last_name" name="last_name" required>
+        <input type="text" class="form-control" id="last_name" name="last_name" required>
         <label for="username">Usuario</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" class="form-control" id="username" name="username" required>
         <label for="email">email</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" class="form-control" id="email" name="email" required>
         <label for="password">contraseña</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" class="form-control" id="password" name="password" required>
         <input type="submit" value="REGISTRAR">
     </form>
     <p>Ya estas registrado? <a href="pages/login.html">Ingresa Aqui</a></p>
     <script src="js/register.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
