--- a/src/public/pages/login.html
+++ b/src/public/pages/login.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form id="loginForm">
-        <label for="email">email</label>
-        <input id="email" name="email">
+        <label for="username">Username</label>
+        <input id="username" name="username">
         <label for="password">Password</label>
         <input id="password" name="password" type="password">
         <input type="submit" value="LOG IN">
