--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,6 +23,7 @@
         <input type="password" class="form-control" id="password" name="password" required>
         <input type="submit" value="REGISTRAR">
     </form>
+    <button id="facebook-login">CONECTATE CON FACEBOOK</button>
     <p>Ya estas registrado? <a href="pages/login.html">Ingresa Aqui</a></p>
     <script src="js/register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
